Revert "Removendo UnitTest1.cs"
This reverts commit f7deea64a8326efde13feb6f2af43847891bc690.

--- a/TestCorrection/Views/Corrigir/Corrigir.cshtml
+++ b/TestCorrection/Views/Corrigir/Corrigir.cshtml
@@ -14,7 +14,7 @@
         <h4>Correção da Prova</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <input type="hidden" name="CandidateId" value="@Model.CandidateId" />
+        <input type="text" name="CandidateId" value="@Model.CandidateId" />
         <input type="hidden" name="QuestiontId" value="@Model.QuestiontId" />
         @Html.HiddenFor(model => model.Image)
         @Html.HiddenFor(model => model.Base64String)
